// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test existing resources 1`] = `
Object {
  "Resources": Object {
    "testeventbridgekinesisstreamexistingresourceEventsRuleC7743154": Object {
      "Properties": Object {
        "Description": "event rule props",
        "ScheduleExpression": "rate(5 minutes)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testexistingstreamA6CF7AE7",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testeventbridgekinesisstreamexistingresourceeventsRoleFD13459F",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testeventbridgekinesisstreamexistingresourceKinesisStreamGetRecordsIteratorAgeAlarmE700B5FA": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamexistingresourceKinesisStreamReadProvisionedThroughputExceededAlarmA06674FD": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamexistingresourceeventsRoleDefaultPolicy126D4DED": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testexistingstreamA6CF7AE7",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testeventbridgekinesisstreamexistingresourceeventsRoleDefaultPolicy126D4DED",
        "Roles": Array [
          Object {
            "Ref": "testeventbridgekinesisstreamexistingresourceeventsRoleFD13459F",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "testeventbridgekinesisstreamexistingresourceeventsRoleFD13459F": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testexistingstreamA6CF7AE7": Object {
      "Properties": Object {
        "Name": "existing-stream",
        "RetentionPeriodHours": 48,
        "ShardCount": 5,
      },
      "Type": "AWS::Kinesis::Stream",
    },
  },
}
`;

exports[`Test snapshot match with default parameters 1`] = `
Object {
  "Resources": Object {
    "testeventbridgekinesisstreamsdefaultparametersEventsRuleFFD1F314": Object {
      "Properties": Object {
        "Description": "event rule props",
        "ScheduleExpression": "rate(5 minutes)",
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "testeventbridgekinesisstreamsdefaultparametersKinesisStream9FB4F7F1",
                "Arn",
              ],
            },
            "Id": "Target0",
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "testeventbridgekinesisstreamsdefaultparameterseventsRole94A3623E",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "testeventbridgekinesisstreamsdefaultparametersKinesisStream9FB4F7F1": Object {
      "Properties": Object {
        "RetentionPeriodHours": 24,
        "ShardCount": 1,
        "StreamEncryption": Object {
          "EncryptionType": "KMS",
          "KeyId": "alias/aws/kinesis",
        },
      },
      "Type": "AWS::Kinesis::Stream",
    },
    "testeventbridgekinesisstreamsdefaultparametersKinesisStreamGetRecordsIteratorAgeAlarmE0D529DB": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Record Processing Falling Behind, there is risk for data loss due to record expiration.",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "GetRecords.IteratorAgeMilliseconds",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 2592000,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamsdefaultparametersKinesisStreamReadProvisionedThroughputExceededAlarmF8AE8C5D": Object {
      "Properties": Object {
        "AlarmDescription": "Consumer Application is Reading at a Slower Rate Than Expected.",
        "ComparisonOperator": "GreaterThanThreshold",
        "EvaluationPeriods": 1,
        "MetricName": "ReadProvisionedThroughputExceeded",
        "Namespace": "AWS/Kinesis",
        "Period": 300,
        "Statistic": "Average",
        "Threshold": 0,
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "testeventbridgekinesisstreamsdefaultparameterseventsRole94A3623E": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Events Rule Role",
      },
      "Type": "AWS::IAM::Role",
    },
    "testeventbridgekinesisstreamsdefaultparameterseventsRoleDefaultPolicyB5CCC5D7": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "kinesis:ListShards",
                "kinesis:PutRecord",
                "kinesis:PutRecords",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "testeventbridgekinesisstreamsdefaultparametersKinesisStream9FB4F7F1",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "testeventbridgekinesisstreamsdefaultparameterseventsRoleDefaultPolicyB5CCC5D7",
        "Roles": Array [
          Object {
            "Ref": "testeventbridgekinesisstreamsdefaultparameterseventsRole94A3623E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
